--- a/src/components/Reviews/Reviews.css
+++ b/src/components/Reviews/Reviews.css
@@ -2,4 +2,10 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 50px;
+    width: 90%;
+    margin: 50px auto;
+}
+
+.review-heading{
+    margin-top: 50px;
 }
